test/cases/compile_errors/empty_for_loop_body.zig
export fn a() void {
    for(undefined) |x|;
}

// error
//
// :2:23: error: expected block or assignment, found ';'
